--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,8 @@ sysinfo.txt
 *.unitypackage
 *.app
 
+lib_burst_generated*.*
+
 # Crashlytics generated file
 crashlytics-build.properties
 
@@ -101,3 +103,4 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+.fake
